# bf6-settings-manager

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  main.py  pyproject.toml  run.bat  version_info.txt
app/: __init__.py
app/src/: __init__.py  app_settings.py  config_manager.py  optimizer.py  updater.py
app/src/ui/: main_window.py
app/src/ui/components/: __init__.py  dropdown_setting.py  slider_setting.py
