[project]
name = "bf6-settings-manager"
version = "1.0.1"
description = "Battlefield 6 Settings Manager - Manage and optimize your BF6 settings"
authors = [{name = "SOFTWARE MATRIX LIMITED"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "flet>=0.28.3",
    "flet-desktop>=0.28.3",
    "psutil>=6.1.0",
    "pywin32>=308",
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.0",
    "briefcase>=0.3.24",
]
keywords = ["bf6", "battlefield 6", "settings manager", "game settings", "optimization"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "briefcase>=0.3.24",
]

[project.scripts]
bf6-settings-manager = "app.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.briefcase]
project_name = "BF6 Settings Manager"
bundle = "com.bf6settingsmanager.app"
version = "1.0.1"
author = "Deco"
author_email = "decouk.sc@gmail.com"

[tool.briefcase.app.app]
formal_name = "Battlefield 6 Settings Manager"
description = "Battlefield 6 Settings Manager - Manage and optimize your BF6 settings"
license = {file = "LICENSE"}
sources = ['app']
icon = "resources/icon"

[tool.briefcase.app.app.windows]
system_requires = []
